--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://drmn29.github.io/'
 languageCode = 'en-us'
 title = 'dirman hana'
 theme = 'etch'
